<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Da!surf</string>
    <string name="content_column">Content</string>
    <string name="page_referrers">Referrers</string>
    <string name="refresh_action">Refresh</string>
    <string name="logout_action">Logout</string>
    <string name="page_wises">Wises</string>
    <string name="page_filters">Filters</string>
    <string name="page_wise">Wises</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_wises">No Wises</string>
    <string name="logo">Avatar</string>
    <string name="choose">Choose</string>

    <!-- AuthenticatorActivity -->
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="bg_offer_checker">BG</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset daily cache</string>
    <string name="delete">Delete</string>
    <string name="title_settings">Settings</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>

    <string-array name="array_names">
        <item>"Andriy Hristyan"</item>
        <item>"Dmitriy Dovbnya"</item>
    </string-array>

    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>


    <string name="title_following">Following</string>
    <string name="toolbar_bio">Bio</string>
    <string name="toolbar_details">Details</string>

    <string name="card_to_details">card_to_details</string>
    <string name="toolbar_transition">toolbar_transition</string>

    <string name="bacon_ipsum">
        Bacon ipsum dolor sit amet venison shankle pork chop meatball tri-tip beef ribs turducken.
        Strip steak ball tip boudin shank, turducken leberkas pork chop beef ribs ham hock sausage
        frankfurter prosciutto doner ham. Bacon landjaeger ball tip, andouille chuck beef ribs jowl
        kevin tri-tip turkey biltong frankfurter sausage. Boudin pork belly meatloaf chicken cow
        tri-tip kielbasa shoulder. Pork loin pig boudin hamburger pastrami short ribs. Sirloin
        tongue pork loin chicken spare ribs bresaola pastrami.\n\n
        Tenderloin turducken pork chop, pork belly beef ribs brisket ham. Turducken landjaeger short
        loin capicola pancetta pork chop strip steak rump meatloaf brisket kevin doner short ribs
        salami. Beef prosciutto flank leberkas landjaeger swine. Fatback prosciutto sausage, jerky
        tail tongue hamburger jowl biltong shank pork belly swine filet mignon chicken ground round.
        Pork chop porchetta ground round tri-tip tail t-bone.\n\n
        Landjaeger rump bacon salami sausage pork loin pig brisket strip steak corned beef. Biltong
        sirloin meatloaf ribeye, bresaola cow chicken t-bone frankfurter andouille strip steak jerky
        capicola. Ribeye porchetta strip steak boudin. Kielbasa cow brisket pastrami ball tip
        tenderloin bresaola ham. Biltong andouille chuck ham hock jerky beef chicken, flank shankle
        ball tip venison porchetta kevin fatback kielbasa. Boudin tongue ground round, turkey pork
        belly salami corned beef pork tri-tip meatloaf sausage andouille strip steak pig. Spare ribs
        beef meatloaf rump sausage doner frankfurter.\n\n
        Fatback porchetta pork loin meatball, turducken pork chop drumstick boudin. Kevin tri-tip
        ground round corned beef, ribeye swine filet mignon salami pork spare ribs pork chop
        brisket. Filet mignon shankle t-bone bacon. Turducken capicola turkey porchetta kielbasa
        shank pork loin jerky venison tenderloin boudin ham hock ground round.</string>
    <string name="no_offers_found">No offers</string>
    <string name="menu_back">Back</string>
    <string name="menu_refresh">Refresh</string>
    <string name="description_details_transition">description_details_transition</string>
    <string name="offer_list_image_description">Click to see details</string>

    <!-- Details -->
    <string name="details_toolbar_title">Details</string>


    <!-- Settings -->
    <string name="pref_title">Settings</string>
    <string name="pref_notification_sound">pref_notification_sound</string>
    <string name="pref_notification_sound_summary">Play a sound on a new offer</string>
    <string name="pref_notification_sound_summary_title">Notification sound</string>

    <string name="pref_notification_vibro">pref_notification_vibro</string>
    <string name="pref_notification_vibro_summary">Vibrate on a new offer</string>
    <string name="pref_notification_vibro_summary_title">Vibration</string>

    <string name="pref_notification_show">pref_notification_show</string>
    <string name="pref_notification_show_summary">Show notifications on a new offer</string>
    <string name="pref_notification_show_summary_title">Notifications</string>
</resources>